syntax = "proto3";

//package grpc.detect;
//option java_outer_classname = "NormalDetect";
package grpcNormalDetector;
option java_package = "com.deepthink.vending.grpc";
// option java_multiple_files = true;

service NormalDetector {
    rpc detect (ImageRequest) returns (DetectResponse);
}

message NormalBox {
    int32 xmin = 1;
    int32 ymin = 2;
    int32 xmax = 3;
    int32 ymax = 4;
    string label = 5;
    float score = 6;
}

message ImageRequest {
    int32 requestId = 1;
    bytes data = 2;
    int32 height = 3;
    int32 width = 4;
    int64 deviceId = 5;
    string stage = 6;
    string appType = 7;
    int32 shelfId = 8;
    int64 operationLogId = 9;
    repeated string productCodes = 10;
}

message DetectResponse {
    int32 requestId = 1;
    repeated NormalBox normalBoxes = 2;
    float usedTime = 3;
    int32 status = 4;
    string msg = 5;
}
